fix a white space under the header

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -307,7 +307,7 @@ footer {
 }
 
 .slider-wrapper img{
-    margin-top:250px;
+    margin-top:225px;
 }
 
 .nivo-caption {
